updated about section

--- a/public/locales/de.json
+++ b/public/locales/de.json
@@ -38,6 +38,7 @@
   "whoiam_1": "Hallo! Ich bin Salvatore Dininni! Ich lebe derzeit in der Schweiz. Ich interessiere mich für Web-Technologien und Web-Entwicklung.",
   "whoiam_2": "Ich bin Frontend-Entwickler, hochmotiviert, offen für neue Herausforderungen, lernfähig, teamorientiert, kommunikationsstark und habe ein gutes Gespür für Design. Leidenschaft für Technologie und die Lösung technischer Herausforderungen. Offen für eine Stelle als Frontend.",
   "whoiam_3": "Meine Interessen liegen in der Lösung von Problemen im Zusammenhang mit Software-Webanwendungen und dem Entwerfen der coolsten Funktionen.",
+  "whoiam_4": " Nach einer erfolgreichen Karriere als Chef de Cuisine ergriff ich die Gelegenheit, die sich mir bei Pandemic bot, um in die dynamische IT-Branche zu wechseln. Dieser Wechsel unterstreicht nicht nur meine Anpassungsfähigkeit, sondern spiegelt auch meinen Wunsch wider, mich neuen Herausforderungen zu stellen und mich in verschiedenen Bereichen auszuzeichnen.",
   "link_projects": "Schauen Sie sich meine neuesten Projekte an.",
   "get_in_touch": "In Kontakt kommen",
   "contanct_parag": "Ich bin freiberuflich oder als Vollzeitstelle verfügbar. Kontaktieren Sie mich und lassen Sie uns reden.",
