--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -38,6 +38,7 @@
   "whoiam_1": "Hello! I’m Salvatore Dininni! I currently live in Switzerland. I'm passionate about Web Technologies and Web Development.",
   "whoiam_2": "I'm a Frontend Developer, highly motivated, open to new challenges, quick learner, team-oriented, with good communication skills, and with a good eye for design. Passionate about technology and solving technical challenges. Open for a position as Frontend.",
   "whoiam_3": "My interests lie in solving problems related software Web Applications, and designing the coolest features.",
+   "whoiam_4": "Transitioning from a successful career as a Chef de Cuisine, I seized the opportunity presented by the pandemic to pivot into the dynamic realm of IT. This shift not only underscores my adaptability but also reflects my eagerness to embrace new challenges and excel in diverse domains.",
   "link_projects": "Check out my latest projects.",
   "get_in_touch": "Get In Touch",
   "contanct_parag": "I am available for freelance or a full-time positions. Contact me and let's talk.",
