--- a/public/locales/it.json
+++ b/public/locales/it.json
@@ -39,6 +39,7 @@
   "whoiam_1": "Ciao a tutti! Sono Salvatore Dininni! Attualmente vivo in Svizzera. Sono appassionato di tecnologie web e sviluppo web.",
   "whoiam_2": "Sono uno sviluppatore Frontend, altamente motivato, aperto a nuove sfide, che impara velocemente, orientato al team, con buone capacità di comunicazione e con un buon occhio per il design. Appassionato di tecnologia e di risolvere sfide tecniche. Aperto per una posizione come Frontend.",
   "whoiam_3": "I miei interessi si concentrano sulla risoluzione di problemi legati alle applicazioni web e sulla progettazione delle più belle funzionalità.",
+  "whoiam_4": " Transizione da una carriera di successo come Chef de Cuisine, ho colto l'opportunità offerta dalla pandemia per fare il passaggio nel dinamico settore dell'IT. Questo cambiamento non solo sottolinea la mia adattabilità, ma riflette anche il mio desiderio di abbracciare nuove sfide ed eccellere in diversi settori.",
   "link_projects": "Scopri i miei ultimi progetti.",
   "get_in_touch": "Contattami",
   "contanct_parag": "Sono disponibile per posizioni da freelance o a tempo pieno. Contattatemi e parliamone.",
