added select input to the form and installed react toastify

--- a/public/locales/de.json
+++ b/public/locales/de.json
@@ -48,9 +48,13 @@
   "whack-bug": "Entwicklung eines Spiels namens \"Whack a Bug\" mit HTML, CSS und JavaScript.",
   "about-me": "Über mich",
   "services": "Leistungen",
+  "restyling_dev": "Restyling",
+  "select_service": "Wählen Sie eine Art von Dienstleistung",
   "prov_services": "Geleistete Dienste",
+  "web_dev": "Entwicklung von Web-Anwendungen",
+  "hosting": "Hosting",
   "service-app-creation":"Erstellung von Websites und Webanwendungen",
   "restyling-description": "Sie haben bereits eine Website und möchten sie attraktiv gestalten, um neue Kunden anzuziehen. Ich bin für Sie da.",
   "app-creation-description": "Ich bin Experte für die Erstellung moderner Anwendungen und Websites. Ich bin auch ein Experte für moderne Technologien wie React, Angular und Laravel. Für weitere Informationen zögern Sie bitte nicht, mich zu kontaktieren."
-
+  
 }
