--- a/public/locales/it.json
+++ b/public/locales/it.json
@@ -52,5 +52,9 @@
   "hosting-description" : "Sono orgogliosi di offrire un servizio di hosting web completo che permette a imprese e privati di stabilire una solida presenza online in modo semplice. Con la mia gamma completa di funzionalità, mi occupo di ogni aspetto del tuo percorso online, dalla creazione del dominio alla gestione delle email e oltre.",
   "service-app-creation":"Creazione di Siti ed Applicationi Web",
   "restyling-description": "Avete già un sito web e volete renderlo accattivante per attirare nuovi clienti. Sono a vostra disposizione.",
-  "app-creation-description": "Sono esperto nella creazione di applicazioni e siti web moderni. Inoltre, possiedo una conoscenza approfondita di tecnologie moderne come React, Angular e Laravel. Per ulteriori informazioni non esitate a contattarmi."
+  "app-creation-description": "Sono esperto nella creazione di applicazioni e siti web moderni. Inoltre, possiedo una conoscenza approfondita di tecnologie moderne come React, Angular e Laravel. Per ulteriori informazioni non esitate a contattarmi.",
+  "select_service": "Selezionare un tipo di servizio",
+  "restyling_dev": "Restyling",
+  "web_dev": "Sviluppo di applicativi Web",
+  "hosting": "Hosting"
 }  
