updated about section and experiences

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -35,7 +35,7 @@
   "luna_app": "Luna Project – a restaurant review application where users can find, rate, and comment on local restaurants.",
   "githubapp_description": "This application is created using React JS, you can search for users on github, once you click on it, you will be redirected to their profile.",
   "description": "From the sizzling world of the kitchen to the dynamic realm of tech, my journey took an unexpected turn during the pandemic. Embracing the art of coding with TypeScript, React, and Angular has become my passion. With a deep understanding of frontend technologies, I bring a unique blend of creativity and technical prowess to every project. Currently exploring new opportunities in the frontend landscape – let's create something amazing together!",
-  "whoiam_1": "Hello! I’m Salvatore Dininni! I currently live in Switzerland. I'm passionate about Web Technologies and Web Development.",
+  "whoiam_1": "Hello! I’m Salvatore Dininni! I currently live in Southern California. I'm passionate about Web Technologies and Web Development.",
   "whoiam_2": "I'm a Frontend Developer, highly motivated, open to new challenges, quick learner, team-oriented, with good communication skills, and with a good eye for design. Passionate about technology and solving technical challenges. Open for a position as Frontend.",
   "whoiam_3": "My interests lie in solving problems related software Web Applications, and designing the coolest features.",
    "whoiam_4": "Transitioning from a successful career as a Chef de Cuisine, I seized the opportunity presented by the pandemic to pivot into the dynamic realm of IT. This shift not only underscores my adaptability but also reflects my eagerness to embrace new challenges and excel in diverse domains.",
