--- a/public/locales/de.json
+++ b/public/locales/de.json
@@ -4,7 +4,7 @@
   "projects": "Projekte",
   "project": "Projekt",
   "contact": "Kontakte",
-  "developer": "Frontend Entwickler",
+  "developer": "Web Entwickler",
   "name": "Name",
   "message": "Nachricht",
   "email": "Email",
@@ -36,7 +36,7 @@
   "githubapp_description": "Diese Anwendung wird mit React JS erstellt. Sie können auf Github nach Benutzern suchen. Sobald Sie darauf klicken, werden Sie zu deren Profil weitergeleitet.",
   "description": "Von der brodelnden Welt der Küche in das dynamische Reich der Technik, nahm meine Reise während der Pandemie eine unerwartete Wendung. Die Kunst des Programmierens mit TypeScript, dem jüngeren Cousin von JavaScript, ist zu meiner Leidenschaft geworden. Mit einem tiefen Verständnis von Frontend-Technologien bringe ich eine einzigartige Mischung aus Kreativität und technischem Können in jedes Projekt ein. Derzeit erkunde ich neue Möglichkeiten in der Frontend-Landschaft - lassen Sie uns gemeinsam etwas Erstaunliches schaffen!",
   "whoiam_1": "Hallo! Ich bin Salvatore Dininni! Ich lebe derzeit in der Schweiz. Ich interessiere mich für Web-Technologien und Web-Entwicklung.",
-  "whoiam_2": "Ich bin Frontend-Entwickler, hochmotiviert, offen für neue Herausforderungen, lernfähig, teamorientiert, kommunikationsstark und habe ein gutes Gespür für Design. Leidenschaft für Technologie und die Lösung technischer Herausforderungen. Offen für eine Stelle als Frontend.",
+  "whoiam_2": "Ich bin Web-Entwickler, hochmotiviert, offen für neue Herausforderungen, lernfähig, teamorientiert, kommunikationsstark und habe ein gutes Gespür für Design. Leidenschaft für Technologie und die Lösung technischer Herausforderungen. Offen für eine Stelle als Frontend.",
   "whoiam_3": "Meine Interessen liegen in der Lösung von Problemen im Zusammenhang mit Software-Webanwendungen und dem Entwerfen der coolsten Funktionen.",
   "whoiam_4": " Nach einer erfolgreichen Karriere als Chef de Cuisine ergriff ich die Gelegenheit, die sich mir bei Pandemic bot, um in die dynamische IT-Branche zu wechseln. Dieser Wechsel unterstreicht nicht nur meine Anpassungsfähigkeit, sondern spiegelt auch meinen Wunsch wider, mich neuen Herausforderungen zu stellen und mich in verschiedenen Bereichen auszuzeichnen.",
   "link_projects": "Schauen Sie sich meine neuesten Projekte an.",
